# scripts

./: .gitignore  LICENSE  readme.md
AWS WAF integration/: aws_waf_integration.py  readme.md
Azure WAF Integration/: azure_waf_integration.py  readme.md
Embedding Live Map with iframe/: readme.md  test.html
Google Cloud WAF Integration/: google_cloud_waf_integration.py  readme.md
accessguard-cloudformation/: accessguard.yml
aws-threatwatch-sync/: aws_org_threatwatch_sync.py  readme.md
botguard-demo/: botguard-demo.php
fraudguard-ip-lookup-cli/: README.md  pyproject.toml
fraudguard-ip-lookup-cli/src/fgip/: cli.py  client.py  formatters.py
fraudguard-lists-cli/: fraudguard-cli.py  readme.md
fraudguard-ufw/: readme.md  ufw_blacklist.py
linux-firewall-integration/ufw/: sync_blacklist.sh
linux-firewall-integration/ufw/Sync from FraudGuard.io blacklist API to ufw/: readme.md  sync_blacklist.sh
linux-firewall-integration/ufw/Sync from FraudGuard.io raw list by risk API to ufw/: readme.md
linux-firewall-integration/ufw/Sync from FraudGuard.io raw list by threat API to ufw/: block_by_threat.sh  readme.md
linux-firewall-integration/ufw/Sync from FraudGuard.io raw lists API to ufw/: block_by_risk.sh  readme.md
offline-database-log-enricher/: fg_enrich.py  readme.md
offline-db-examples/: download_offline_db.py
offline-threat-database-cli/: readme.md  sqlite_lookup.py
