[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudguard-ip-lookup-cli"
version = "0.1.0"
description = "FraudGuard IP reputation lookup CLI (Get Specific IP Reputation V2)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]

[project.scripts]
fgip = "fgip.cli:main"